--- a/utilities.css
+++ b/utilities.css
@@ -1,4 +1,8 @@
-header {height: 120px; background-color: red;}
-header nav {margin: auto 0;}
+header {
+    height: 120px; 
+    display: flex;
+    flex-direction: column;
+}
+header nav {font-family: Arial, Helvetica, sans-serif; font-size: 32px; font-weight: 900;}
 
 .container {width: 1300px; margin: 0 auto;}
