--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-.hero-clip {height: 500px; background-color: red;}
 
-.hero-clip img {height: 800px; width: 100%;}
+
+nav {display: flex; justify-content: space-between; align-items: center; height: 120px;}
+
+.hero-clip img {
+    width: 100%; 
+    height: 720px; 
+    object-fit: cover; 
+    object-position:100% 55%;
+}
